Fix Ig Feed Spacing

--- a/src/components/LandingPage/LandingPage.scss
+++ b/src/components/LandingPage/LandingPage.scss
@@ -108,7 +108,7 @@
   margin: 1em auto;
   margin-bottom: 0rem;
   width: 100%;
-  min-height: 120vh;
+  min-height: 90vh;
   overflow: hidden;
   padding: 0 3rem;
   border: none;
@@ -271,6 +271,7 @@
 
   .ig-iframe {
     padding: 0;
+    // min-height: 110vh;
   }
 
   .ig-cta {
