--- a/src/scss/_library.scss
+++ b/src/scss/_library.scss
@@ -32,7 +32,7 @@ $layout-breakpoint-phone: 450px;
 
 @mixin page-container-layout {
   background: $white-color;
-  min-height: 84vh;
+  min-height: 86vh;
   padding-top: 4.1em;
 }
 
